# CMakeList.txt : CMake project for parser43, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (parser43 "parser43.cpp"  "util/IntegerRange.h")

# TODO: Add tests and install targets if needed.
